--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "bootstrap": "^4.1.2",
     "core-js": "^2.5.4",
     "firebase": "^5.2.0",
+    "firebase-tools": "^4.0.0",
+    "g": "^2.0.1",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
